Fixed scroll on mobile/responsive view by setting container width

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 
 <body>
+    <main>
     <div class="container">
         <div class="sedans">
             <img src="images/icon-sedans.svg" alt="sedan icon">
@@ -59,7 +60,7 @@ arrive in style.</p>
     </div>
 
 
-
+</main>
 
 </body>
 </html>
